--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">get!!</a>
-        <a href="#">新規登録</a>
+        <a href="#">aho</a>
         <a href="#" class="login">ログイン</a>
       </div>
     </div>
